--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
-<!-- ICS2O-Unit6-02-PWA -->
+<!-- ICS2O-Unit 6-02-HTML-JS -->
 <html lang="en-ca">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Cookie Clicker PWA" />
+    <meta name="description" content="Cookie Clicker, in JS" />
     <meta name="keywords" content="mths, icd2o" />
     <meta name="author" content="Lynn Lukose" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="mobile-web-app-status-bar-style" content="black" />
-    <meta name="theme-color" content="#dbf8fa" />
-    <link
-      rel="canonical"
-      href="https://MTHS-ICD2O-1-2024.github.io/ICD2O-Unit-6-02-lynn-lukose-07/"
-    />
-    <link rel="manifest" href="manifest.webmanifest" />
-    <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      media="none"
-      onload="if(media!='all')media='all'"
+    />
+    <link
+      rel="stylesheet"
+      href="https://code.getmdl.io/1.3.0/material.deep_purple-pink.min.css"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png"
     />
     <link
       rel="icon"
@@ -36,14 +33,8 @@
       sizes="16x16"
       href="./favicon-16x16.png"
     />
-    <link
-      rel="stylesheet"
-      href="href"
-      ="https://code.getmdl.io/1.3.0/material.deep_purple-pink.min.css"
-      media="none"
-      onload="if(media!='all')media='all'"
-    />
-    <title>Cookie Clicker PWA</title>
+    <link rel="manifest" href="./site.webmanifest" />
+    <title>Cookie Clicker, in JS</title>
   </head>
 
   <body>
