--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <br />
           <form action="#">
             <a onclick="clickCookie()"
-              ><img src="./images/cookie.jpeg" alt="Cookie"
+              ><img src="./images/cookie.png" alt="Cookie"
             /></a>
           </form>
         </div>
